--- a/vscode-ck3-tools/templates/trait/personality_trait.yml
+++ b/vscode-ck3-tools/templates/trait/personality_trait.yml
@@ -7,69 +7,35 @@ parameters:
   name:
     type: string
     required: true
-    description: Trait name
+    description: Trait name (lowercase_with_underscores)
 
-  primary_stat:
-    type: enum
-    values: [diplomacy, martial, stewardship, intrigue, learning, prowess]
-    required: true
-    description: Primary stat to modify
+structure: |
+  {{name}} = {
+  	category = personality
 
-  stat_value:
-    type: integer
-    default: 2
-    min: -5
-    max: 10
-    description: Amount to modify stat by
+  	# --- Stat modifiers (edit as needed) ---
+  	diplomacy = 2
+  	# martial = 1
+  	# stewardship = 1
+  	# intrigue = 1
+  	# learning = 1
+  	# prowess = 1
 
-  secondary_stat:
-    type: enum
-    values: [diplomacy, martial, stewardship, intrigue, learning, prowess, none]
-    default: none
-    description: Optional secondary stat
+  	# --- Monthly modifiers (remove unused) ---
+  	# monthly_prestige = 0.5
+  	# monthly_piety = 0.5
 
-  secondary_value:
-    type: integer
-    default: 1
-    description: Amount for secondary stat
+  	# --- Opinion modifiers ---
+  	# same_opinion = 15
+  	# opposite_opinion = -15
+  	# attraction_opinion = 10
 
-  monthly_modifier:
-    type: enum
-    values: [prestige, piety, gold, none]
-    default: none
-    description: Monthly resource modifier
+  	# --- Opposites ---
+  	# opposites = { cowardly }
 
-  monthly_value:
-    type: float
-    default: 0.1
-    description: Monthly modifier value
-
-  opposite_trait:
-    type: string
-    default: ""
-    description: Opposite trait name (optional)
-
-  ruler_designer_cost:
-    type: integer
-    default: 20
-    description: Cost in ruler designer
-
-structure:
-  category: personality
-
-  opposites: "{{#if opposite_trait}}{ {{opposite_trait}} }{{/if}}"
-
-  "{{primary_stat}}": "{{stat_value}}"
-  {{#if (ne secondary_stat 'none')}}
-  "{{secondary_stat}}": "{{secondary_value}}"
-  {{/if}}
-  {{#if (ne monthly_modifier 'none')}}
-  "monthly_{{monthly_modifier}}": "{{monthly_value}}"
-  {{/if}}
-
-  ruler_designer_cost: "{{ruler_designer_cost}}"
-
-  ai_value: 50
+  	ruler_designer_cost = 20
+  	ai_value = 50
+  }
 
 localization:
   name_template: "{{capitalize (format_name name)}}"
