--- a/vscode-ck3-tools/tsconfig.json
+++ b/vscode-ck3-tools/tsconfig.json
@@ -16,5 +16,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test", "src/test/**/*"]
 }
