Add rudimentary type validation and begin to fix a false negative about effect/trigger mismatch

--- a/vscode-ck3-tools/package.json
+++ b/vscode-ck3-tools/package.json
@@ -79,6 +79,10 @@
       {
         "command": "ck3-tools.goToLocalization",
         "title": "CK3: Go to Localization"
+      },
+      {
+        "command": "ck3-tools.validateDirectory",
+        "title": "CK3: Validate Directory"
       }
     ],
     "configuration": {
@@ -92,6 +96,13 @@
       }
     },
     "menus": {
+      "explorer/context": [
+        {
+          "command": "ck3-tools.validateDirectory",
+          "when": "explorerResourceIsFolder",
+          "group": "ck3-tools@1"
+        }
+      ],
       "editor/context": [
         {
           "command": "ck3-tools.addTrait",
